# app-tt

./: .gitignore  Cargo.toml  Changes  MANIFEST.SKIP  Makefile.PL  README  README.md  README.pod  cpanfile
.github/workflows/: ci.yml
lib/App/: tt.pm
script/: tt
src/: about.txt  commands.rs  entries.rs  event.rs  main.rs  register.rs  report.rs  start.rs  status.rs  stop.rs  styling.rs  utils.rs
src/commands/: edit.rs  register.rs  report.rs  start.rs  status.rs  stop.rs
t/: 00-project.t  Helper.pm  actions.t  edit.t  methods.t  register.t  start-stop.t  tt.t
