[package]
name = "tt"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
chrono = { version = "0.4", features = ["serde"] }
clap = { "version" = "4.5", features = ["color", "string"] }
prettytable-rs = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.21.0"
